[package]
name = "ksrt"
description = "Kafka Schema Registry Tool"
version = "0.1.0"
authors = ["Peter Nehrer <pnehrer@eclipticalsoftware.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/ecliptical/ksrt"
keywords = ["kafka", "schema", "protobuf"]

[dependencies]
anyhow = "1.0"
avro-rs = "0.11"
futures = "0.3"
gumdrop = "0.8"
log = "0.4"
prost = "0.6"
prost-build = "0.6"
prost-types = "0.6"
regex = "1.4"
schema_registry_converter = { version = "2.0", default-features = false, features = ["blocking"] }
tempfile = "3.1"
tracing = "0.1"
tracing-subscriber = "0.2"

[build-dependencies]
built = { version = "0.4", features = ["chrono", "git2"] }

[features]
default = ["log-level-info"]

# Set only one of these
log-level-info = ["log/release_max_level_info"]
log-level-debug = ["log/release_max_level_debug"]
log-level-trace = ["log/release_max_level_trace"]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 1

[package.metadata.rpm]
package = "ksrt"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
ksrt = { path = "/usr/bin/ksrt" }
